docs: integrate field notes architecture and establish security bouncer logic

--- a/field_notes/index.html
+++ b/field_notes/index.html
@@ -63,6 +63,11 @@
             <li><a href="#conflict-management">The Conflict Management Lesson</a></li>
             <li><a href="#general-thoughts">General Thoughts & Philosophy</a></li>
         </ul>
+
+        <h2>Future Work</h2>
+        <ul>
+            <li><a href="#future-work">WIP Items</a></li>
+        </ul>
     </nav>
 
     <main>
@@ -180,8 +185,11 @@
                 <div class="meta">Tag: Tooling | Impact: Standardization</div>
                 <p>Venv is like hot glue - a stop gap solution that becomes standard - docker feels the same - has better utility these days.</p>
             </article>
+        </section>
 
-            <!-- TBD Items for Validation -->
+        <!-- FUTURE WORK -->
+        <section id="future-work">
+            <h2 class="section-title">Future Work (WIP)</h2>
             <ul class="tbd-list">
                 <li>[WIP] Polling RAPL Telemetry during stress - Defensive coding in recovery scripts</li>
                 <li>[WIP] Rolling window diff - Comparing BIOS logs</li>
