--- a/field_notes/index.html
+++ b/field_notes/index.html
@@ -10,12 +10,13 @@
 
     <nav>
         <h1>The Field Manual</h1>
-        <div class="subtitle">Jason Allred | Lead Engineer</div>
+        <div class="subtitle">Jason Allred</div>
 
         <h2>Mission Control</h2>
         <ul>
             <li><a href="https://code.jason-lab.dev" target="_blank" class="mission-link">VS Code (Remote)</a></li>
             <li><a href="https://pager.jason-lab.dev" target="_blank" class="mission-link">Pager (Logs)</a></li>
+            <li><a href="https://monitor.jason-lab.dev" target="_blank" class="mission-link">Observability (Grafana)</a></li>
         </ul>
 
         <h2>Systems Architecture</h2>
