feat: deploy career timeline and AI-generated search index

--- a/field_notes/index.html
+++ b/field_notes/index.html
@@ -19,6 +19,7 @@
             <li><a href="https://code.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> VS Code (Remote)</a></li>
             <li><a href="https://pager.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> Pager (Logs)</a></li>
             <li><a href="https://monitor.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> Observability (Grafana)</a></li>
+            <li><a href="timeline.html" class="mission-link"><span class="status-dot online"></span> Career Timeline</a></li>
         </ul>
 
         <h2>Systems Architecture</h2>
