feat: mobile UX polish, privacy filter implementation, and updated roadmap

--- a/field_notes/index.html
+++ b/field_notes/index.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="menu-toggle" aria-label="Toggle Navigation">☰</button>
 
-    <nav>
+    <nav id="sidebar">
         <h1>The Field Manual</h1>
         <div class="subtitle">Jason Allred</div>
-
+        
         <input type="text" id="nav-filter" placeholder="Filter nodes..." aria-label="Filter navigation">
 
         <h2>Mission Control</h2>
         <ul>
             <li><a href="https://code.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> VS Code (Remote)</a></li>
             <li><a href="https://pager.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> Pager (Logs)</a></li>
-            <li><a href="https://monitor.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> Observability (Grafana)</a></li>
+            <li><a href="https://monitor.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> Metrics (Grafana)</a></li>
             <li><a href="timeline.html" class="mission-link"><span class="status-dot online"></span> Career Timeline</a></li>
         </ul>
 
