docs: add data origin brag/disclaimer to timeline

--- a/field_notes/timeline.html
+++ b/field_notes/timeline.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timeline | Jason Allred</title>
-    <link rel="stylesheet" href="style.css?v=7.0">
+    <link rel="stylesheet" href="style.css?v=7.1">
     <style>
         .safe-nav-bar { margin-bottom: 20px; }
         .safe-btn { color: #888; text-decoration: none; border: 1px solid #444; padding: 5px 10px; font-size: 0.8rem; }
@@ -36,6 +36,11 @@
         <section>
             <h2 style="color: var(--heading-color); border-bottom: 1px solid var(--border-color); padding-bottom: 10px;">/home/jason/career_history</h2>
             
+            <div class="disclaimer-box">
+                <span style="color: var(--accent-color); font-weight: bold;">[DATA ORIGIN]</span> 18 years of raw engineering logs, synthesized by local AI (Mistral-7B). 
+                <br><span style="color: #888; font-size: 0.8em;">Note: Automated classification may contain artifacts. Reviewing logs via the terminal interface below.</span>
+            </div>
+
             <div class="timeline-container" id="tree-root">
                 <div style="color: #666; padding: 20px;">[WAIT] Loading archives...</div>
             </div>
