--- a/field_notes/index.html
+++ b/field_notes/index.html
@@ -84,7 +84,7 @@
                 <h3>The VISA Tool Engine (Metadata-Driven Design)</h3>
                 <div class="meta">Tag: Architecture | Impact: Maintenance Reduction</div>
                 <p>I took over a complex debug tool where the logic for different CPU cores and steppings was becoming unmanageable through traditional hard-coding. By "grokking" the code to find its "beating heart," I realized the project could be re-architected as a metadata-driven engine centered on XML.</p>
-                <p>I shifted the design so that the XML schema defined the GUI and silicon features—such as a checkbox to forward VISA signals over JTAG—allowing the tool to auto-detect and deploy functionality without any further code changes. This "Configuration as Code" approach allowed me to support years of new hardware iterations by simply updating XML definitions scraped directly from RTL.</p>
+                <p>I shifted the design so that the XML schema defined the GUI and silicon features—such as a checkbox to forward VISA signals over JTAG—allowing the tool to auto-detect and deploy functionality without any further code changes. <strong>This "Configuration as Code" approach allowed me to support years of new hardware iterations by simply updating XML definitions scraped directly from RTL.</strong></p>
             </article>
 
             <article id="xslt-parsing">
@@ -212,7 +212,7 @@
                 <h3>The RAKP Security Catch (CVE-2013-4782)</h3>
                 <div class="meta">Tag: Security | Impact: CVE Discovery</div>
                 <p>While implementing the RMCP+ protocol stack from scratch in C, I performed a deep dive into the RAKP authentication spec. To properly debug the session negotiation, I had to patch the Wireshark (then Ethereal) source code to correctly parse the custom packet exchanges I was seeing.</p>
-                <p>During this process, I identified a fundamental flaw: the BMC would return a salted hash of the user’s password before the client proved their identity, essentially enabling offline dictionary attacks. Although my concerns were dismissed by senior engineers at the time, this exact vulnerability was later confirmed as industry-wide flaw CVE-2013-4782. This solidified my conviction to trust technical data over hierarchy and to maintain meticulous documentation for critical findings.</p>
+                <p>During this process, I identified a fundamental flaw: the BMC would return a salted hash of the user’s password before the client proved their identity, essentially enabling offline dictionary attacks. <strong>Although my concerns were dismissed by senior engineers at the time, this exact vulnerability was later confirmed as industry-wide flaw CVE-2013-4782.</strong> This solidified my conviction to trust technical data over hierarchy and to maintain meticulous documentation for critical findings.</p>
             </article>
 
             <article id="kernel-patch">
@@ -225,8 +225,8 @@
                 <h3>Negative Testing (The Yield Use Case)</h3>
                 <div class="meta">Tag: Validation | Impact: Yield Improvement</div>
                 <p>I had a big PECI coverage miss, it was rather embarrassing. Because we had a huge list, I was only checking what I knew existed, not what shouldn’t exist. Well, some unexpected endpoints did surface, more echoes of what they should be, but those endpoints should not have been visible. I needed to pivot away from just reading known devices to scanning and including negative space.</p>
-                <p>I recalled a conversation with an expert who had scanned through the BDF region before and adapted that to PECI space. To do that I needed a list of all possible combinations in PCI space - which fit very neatly with a generator pattern. One of the first times I really felt ‘yield’ improved the readability and reliability of my code.</p>
-                <p>After I got it running I still saw ‘extra’ devices popping up, but they turned out to be actual hardware, which was easy to correlate with lspci. It was a huge space to cover, and a full run would have taken almost a week, but with the combination of the bulk transfer API and fast negative returns the expected execution time went from a few days to under 10 hours.</p>
+                <p>I recalled a conversation with an expert who had scanned through the BDF region before and adapted that to PECI space. To do that I needed a list of all possible combinations in PCI space - which fit very neatly with a generator pattern. One of the first times I really felt <em>yield</em> improved the readability and reliability of my code.</p>
+                <p>After I got it running I still saw ‘extra’ devices popping up, but they turned out to be actual hardware, which was easy to correlate with lspci. It was a huge space to cover, and a full run would have taken almost a week, but <strong>with the combination of the bulk transfer API and fast negative returns the expected execution time went from a few days to under 10 hours.</strong></p>
             </article>
 
             <article id="texas-power-on">
@@ -246,7 +246,7 @@
                 <h3>RMCP+ Socket Optimization</h3>
                 <div class="meta">Tag: Stability | Impact: Reliability</div>
                 <p>Our dev team was tracking down a problem where RMCP+ sessions were piling up in our validation cycle, overloading the BMC and causing instability. We had a TCL based framework, but the heavy lifting was done inside DLL files. I had been doing some digging and found the source code. When I mentioned this to the dev lead he asked me to look into the source code as a last resort, as far as they could tell their code was clean.</p>
-                <p>After a bit of sleuthing I found code responsible for opening and closing the sessions on the client side, there was a return between them, so the socket was never closed. This one fix allowed us gave our test suite the stability to add unattended validation cycles and focus on nightly test reports. It was a game changer, and the experience taught me a single line could be worth weeks of effort.</p>
+                <p>After a bit of sleuthing I found code responsible for opening and closing the sessions on the client side, there was a return between them, so the socket was never closed. <strong>This one fix gave our test suite the stability to add unattended validation cycles and focus on nightly test reports.</strong> It was a game changer, and the experience taught me a single line could be worth weeks of effort.</p>
             </article>
         </section>
 
