--- a/field_notes/timeline.html
+++ b/field_notes/timeline.html
@@ -243,9 +243,12 @@
             let buffer = `\n\n`;
             events.forEach(e => {
                 let dateDisplay = e.date;
-                if (!dateDisplay || dateDisplay.includes("Unknown") || dateDisplay.startsWith("1970")) {
+                // Strict visual filter: Only show YYYY-MM-DD or simple Month
+                // If it looks like garbage, hide it.
+                if (!dateDisplay || !dateDisplay.match(/^\d{4}-\d{2}-\d{2}$/)) {
                     dateDisplay = "LOG";
                 }
+                
                 buffer += `[${dateDisplay}] ${e.summary}\n`;
                 if (e.evidence) buffer += `   ↳ ${e.evidence.substring(0, 120)}\n\n`;
             });
