fix: Robust Intercom URL handling and directory index

--- a/field_notes/files.html
+++ b/field_notes/files.html
@@ -160,7 +160,7 @@
             <h2>Mission Control</h2>
             <ul>
                 <li><a href="index.html" class="mission-link"><span class="status-dot online"></span> 📖 Field Manual</a></li>
-                <li><a href="intercom.html" class="mission-link"><span class="status-dot online"></span> Web Intercom</a></li>
+                <li><a href="intercom/" class="mission-link"><span class="status-dot online"></span> Web Intercom</a></li>
                 <li><a href="https://code.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> VS Code (Remote)</a></li>
                 <li><a href="pager.html" class="mission-link"><span class="status-dot online"></span> Pager (Logs)</a></li>
                 <li><a href="timeline.html" class="mission-link"><span class="status-dot online"></span> Career Timeline</a></li>
