feat: v3.0.0 - Stable Web Intercom with Voice capture

--- a/field_notes/intercom/index.html
+++ b/field_notes/intercom/index.html
@@ -123,6 +123,6 @@
         </div>
     </main>
 
-    <script src="../intercom.js?v=1.0"></script>
+    <script src="../intercom_v2.js?v=2.0"></script>
 </body>
 </html>
