Checkpoint Feb 07: Rebranded sidebar, renamed entries, and codified Build Protocol (build_site.py).

--- a/field_notes/files.html
+++ b/field_notes/files.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artifact Map | Jason Allred</title>
-    <link rel="stylesheet" href="style.css?v=10.3">
+    <title>Artifacts | Jason Allred</title>
+    <link rel="stylesheet" href="style.css?v=488571b7.3">
     <style>
         /* Override Main Max-Width to allow full expansion */
         main {
@@ -154,25 +154,25 @@
     <nav id="sidebar">
         <h1>The Field Manual</h1>
         <div class="subtitle">Jason Allred</div>
-        <div class="sys-banner">ARTIFACT SCANNER ONLINE</div>
-        
         <section id="mission-control">
             <h2>Mission Control</h2>
             <ul>
-                <li><a href="index.html" class="mission-link"><span class="status-dot online"></span> 📖 Field Manual</a></li>
-                <li><a href="intercom/" class="mission-link"><span class="status-dot online"></span> Web Intercom</a></li>
-                <li><a href="https://code.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> VS Code (Remote)</a></li>
-                <li><a href="pager.html" class="mission-link"><span class="status-dot online"></span> Pager (Logs)</a></li>
-                <li><a href="timeline.html" class="mission-link"><span class="status-dot online"></span> Career Timeline</a></li>
-                <li><a href="files.html" class="mission-link"><span class="status-dot online"></span> Artifact Map</a></li>
-                <li><a href="https://monitor.jason-lab.dev" target="_blank" class="mission-link"><span class="status-dot online"></span> Observability Deck</a></li>
+                <li><a href="stories.html" class="mission-link">Stories</a></li>
+                <li><a href="timeline.html" class="mission-link">Notes: Logs</a></li>
+                <li><a href="files.html" class="mission-link">Artifacts: Files</a></li>
+                <li><a href="pager.html" class="mission-link">Pager: Alerting</a></li>
+                <li><a href="intercom/" class="mission-link">Intercom</a></li>
+                <li><a href="https://monitor.jason-lab.dev" target="_blank" class="mission-link">Graphana: Observability</a></li>
+                <li><a href="https://code.jason-lab.dev" target="_blank" class="mission-link">VS Code (Remote)</a></li>
             </ul>
         </section>
+        <div class="sys-banner">ARTIFACT SCANNER ONLINE</div>
+        
     </nav>
 
     <main>
         <div id="sys-console">
-            <div>[INIT] Artifact Map loaded.</div>
+            <div>[INIT] Artifacts loaded.</div>
         </div>
 
         <section>
