Engine v2.2: Continuous Research loop with Eternal Refinement and Pager Pulse. Added Research Hub dashboard.

--- a/field_notes/stories.html
+++ b/field_notes/stories.html
@@ -20,7 +20,7 @@
                 <li><a href="files.html" class="mission-link">Artifacts: Files</a></li>
                 <li><a href="pager.html" class="mission-link">Pager: Alerting</a></li>
                 <li><a href="intercom/" class="mission-link">Intercom</a></li>
-                <li><a href="report.html" class="mission-link">Mission Report</a></li>
+                <li><a href="research.html" class="mission-link">Research Hub</a></li>
                 <li><a href="https://monitor.jason-lab.dev" target="_blank" class="mission-link">Graphana: Observability</a></li>
                 <li><a href="https://code.jason-lab.dev" target="_blank" class="mission-link">VS Code (Remote)</a></li>
             </ul>
