--- a/field_notes/timeline.html
+++ b/field_notes/timeline.html
@@ -26,7 +26,7 @@
                 <li><a href="pager.html" class="mission-link">Pager: Alerting</a></li>
                 <li><a href="intercom/" class="mission-link">Intercom</a></li>
                 <li><a href="research.html" class="mission-link">Research Hub</a></li>
-                <li><a href="https://monitor.jason-lab.dev" target="_blank" class="mission-link">Graphana: Observability</a></li>
+                <li><a href="grafana.html" class="mission-link">Grafana</a></li>
                 <li><a href="https://code.jason-lab.dev" target="_blank" class="mission-link">VS Code (Remote)</a></li>
             </ul>
         </section>
