--- a/field_notes/research.html
+++ b/field_notes/research.html
@@ -3,65 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Hub | Jason Allred</title>
+    <title>Research & Strategy | Jason Allred</title>
     <link rel="stylesheet" href="style.css?v=10.3">
     <style>
-        .research-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
+        .hero-section {
+            background: linear-gradient(135deg, #0d1117 0%, #161b22 100%);
+            border: 1px solid var(--border-color);
+            padding: 40px;
             margin-bottom: 40px;
-        }
-        .paper-card {
-            background: #111;
-            border: 1px solid #333;
-            padding: 20px;
-            border-top: 4px solid var(--accent-color);
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        .paper-title {
-            font-size: 1.1rem;
-            font-weight: bold;
-            color: #fff;
-            margin-bottom: 10px;
-        }
-        .paper-impact {
-            font-size: 0.85rem;
-            color: #aaa;
-            margin-bottom: 15px;
-            font-style: italic;
-        }
-        .progress-container {
-            background: #222;
-            height: 10px;
-            border-radius: 5px;
+            position: relative;
             overflow: hidden;
-            margin-bottom: 5px;
         }
-        .progress-bar {
-            height: 100%;
-            background: var(--accent-color);
-            transition: width 0.5s ease;
+        .hero-section::before {
+            content: "v3.1.5";
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-family: monospace;
+            color: #333;
+            font-size: 0.8rem;
         }
-        .progress-label {
-            font-size: 0.75rem;
+        .brag-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .brag-card {
+            background: rgba(255, 255, 255, 0.03);
+            border-left: 4px solid var(--accent-color);
+            padding: 20px;
+        }
+        .brag-title {
+            color: var(--accent-color);
+            font-weight: bold;
+            font-size: 1rem;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+        .brag-text {
+            font-size: 0.85rem;
+            color: #ccc;
+            line-height: 1.4;
+        }
+        .roadmap-container {
+            margin-top: 60px;
+        }
+        .roadmap-item {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 30px;
+            padding-bottom: 30px;
+            border-bottom: 1px solid #222;
+        }
+        .roadmap-meta {
+            min-width: 120px;
+            font-family: monospace;
+            color: var(--accent-dim);
+            font-size: 0.9rem;
+        }
+        .roadmap-content h4 {
+            margin: 0 0 10px 0;
+            color: #fff;
+        }
+        .roadmap-content p {
+            font-size: 0.9rem;
             color: #888;
-            text-align: right;
+            margin: 0;
         }
-        .gem-list {
-            list-style: none;
-            padding: 0;
+        .badge {
+            display: inline-block;
+            padding: 2px 8px;
+            border-radius: 10px;
+            font-size: 0.7rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-left: 10px;
         }
-        .gem-item {
-            border-left: 2px solid var(--accent-color);
-            padding: 10px 15px;
-            margin-bottom: 15px;
-            background: rgba(255, 255, 255, 0.02);
-        }
-        .gem-summary { color: #fff; font-weight: bold; font-size: 0.9rem; }
-        .gem-meta { font-size: 0.75rem; color: #666; margin-top: 5px; }
+        .badge-active { background: #238636; color: #fff; }
+        .badge-planned { background: #1f6feb; color: #fff; }
+        .badge-research { background: #8957e5; color: #fff; }
     </style>
 </head>
 <body>
@@ -86,66 +108,85 @@
     </nav>
 
     <main>
-        <h2 class="section-title">AI Research Implementation Hub</h2>
-        
-        <div class="research-grid" id="research-grid">
-            <!-- Populated via JS -->
-        </div>
+        <section class="hero-section">
+            <h2 style="margin-top: 0; color: #fff;">Diamond Synthesis Engine</h2>
+            <p style="color: #888; font-style: italic; max-width: 800px;">
+                Evolving the "Bicameral Mind" architecture. We treat the local file system as durable external memory, leveraging test-time reasoning to maximize the intelligence of local silicon.
+            </p>
 
-        <section>
-            <h3>High-Fidelity Technical Gems</h3>
-            <div id="tech-gems" class="gem-list">
-                <!-- Populated via JS -->
+            <div class="brag-grid">
+                <div class="brag-card">
+                    <div class="brag-title">Liger-Kernel</div>
+                    <div class="brag-text">Achieved 80% VRAM reduction on Turing GPUs. Enabled high-density reasoning loops for Mistral-7B on restricted hardware.</div>
+                </div>
+                <div class="brag-card">
+                    <div class="brag-title">Report Writer</div>
+                    <div class="brag-text">Implemented physical decoupling of conversational chat and strategic synthesis. Long-form drafts are now routed to a dedicated blueprint sidebar.</div>
+                </div>
+                <div class="brag-card">
+                    <div class="brag-title">Continuous Burn</div>
+                    <div class="brag-text">Automated background refinement loop that critiques and upgrades historical logs into Rank 4 "Diamond Wisdom" artifacts.</div>
+                </div>
+                <div class="brag-card">
+                    <div class="brag-title">Bicameral Sync</div>
+                    <div class="brag-text">Established a multi-host Dream Cycle. Short-term interaction logs on Linux are synthesized via the Windows 4090 Brain into long-term RAG memory.</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="roadmap-container">
+            <h3 class="section-title">The Research Roadmap</h3>
+            
+            <div class="roadmap-item">
+                <div class="roadmap-meta">STABLE</div>
+                <div class="roadmap-content">
+                    <h4>FS-Researcher (2602.01566) <span class="badge badge-active">Active</span></h4>
+                    <p>Implemented the Context Builder (Nibbler) and Report Writer (Web Intercom) bridge. The file system is now the durable primary memory source for the Brain.</p>
+                </div>
+            </div>
+
+            <div class="roadmap-item">
+                <div class="roadmap-meta">STABLE</div>
+                <div class="roadmap-content">
+                    <h4>TTCS: Test-Time Curriculum Synthesis <span class="badge badge-active">Active</span></h4>
+                    <p>The "Synthesize-then-Solve" loop ensures the model critiques its own extraction logic before committing artifacts to the archive.</p>
+                </div>
+            </div>
+
+            <div class="roadmap-item">
+                <div class="roadmap-meta">HORIZON</div>
+                <div class="roadmap-content">
+                    <h4>TTT-Discover: Autonomous Failure Paths <span class="badge badge-planned">Planned</span></h4>
+                    <p>Evolving curriculum synthesis into active discovery. The system will use RL-loops to find the shortest path to reproducing complex silicon validation failures.</p>
+                </div>
+            </div>
+
+            <div class="roadmap-item">
+                <div class="roadmap-meta">HORIZON</div>
+                <div class="roadmap-content">
+                    <h4>MiMo-V2: Multi-Objective RL <span class="badge badge-planned">Planned</span></h4>
+                    <p>Integrating Grafana/Prometheus telemetry as a reward signal. The agent's reasoning will be "punished" for high VRAM waste and "rewarded" for factual extraction hits.</p>
+                </div>
+            </div>
+
+            <div class="roadmap-item">
+                <div class="roadmap-meta">RESEARCH</div>
+                <div class="roadmap-content">
+                    <h4>WideSeek-R1: Parallel Width Scaling <span class="badge badge-research">Researching</span></h4>
+                    <p>Orchestrating parallel sub-agents to extract granular metadata (dates, tools, error codes) simultaneously to improve overall F1 score of the archive.</p>
+                </div>
+            </div>
+        </section>
+
+        <section style="margin-top: 40px; border-top: 1px solid #222; padding-top: 20px;">
+            <h3>Strategic Grounding Statistics</h3>
+            <div id="stats-panel" style="font-family: monospace; color: #555; font-size: 0.85rem;">
+                <!-- Updated via build system or manual entry -->
+                Refined Artifacts: 910 | Strategy Anchors: 14 | Diamond Dreams: 1 | VRAM Efficiency: +80%
             </div>
         </section>
     </main>
 
-    <script>
-        const PAPERS = [
-            { id: "FS-Researcher", title: "FS-Researcher", impact: "Static Synthesis Core (File-System Memory)", progress: 90 },
-            { id: "TTCS", title: "TTCS", impact: "Reasoning Loop (Synthesize-then-Solve)", progress: 60 },
-            { id: "Agentic-R", title: "Agentic-R", impact: "Utility-Based Memory Re-Ranking", progress: 70 },
-            { id: "Apple-CLaRa", title: "Apple CLaRa", impact: "Semantic Compression (Condenser)", progress: 40 },
-            { id: "Liger-Kernel", title: "Liger-Kernel", impact: "VRAM Optimization (DMA Bridge)", progress: 80 },
-            { id: "DeepAgent", title: "DeepAgent", impact: "Multi-Agent Orchestration Foundation", progress: 100 },
-            { id: "TTT-Discover", title: "TTT-Discover", impact: "Autonomous Discovery (Validation Paths)", progress: 0 },
-            { id: "Google-Nested", title: "Google Nested Learning", impact: "Continual Learning Paradigms", progress: 20 },
-            { id: "Dreaming", title: "Subconscious Dreaming", impact: "Multi-Host Memory Consolidation", progress: 0 }
-        ];
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const grid = document.getElementById('research-grid');
-            grid.innerHTML = PAPERS.map(p => `
-                <div class="paper-card">
-                    <div>
-                        <div class="paper-title">${p.title}</div>
-                        <div class="paper-impact">${p.impact}</div>
-                    </div>
-                    <div>
-                        <div class="progress-container">
-                            <div class="progress-bar" style="width: ${p.progress}%"></div>
-                        </div>
-                        <div class="progress-label">${p.progress}% Integrated</div>
-                    </div>
-                </div>
-            `).join('');
-
-            // Fetch Gems (Latest 5 high-rank wins)
-            fetch('data/2024.json')
-                .then(r => r.json())
-                .then(data => {
-                    const container = document.getElementById('tech-gems');
-                    data.filter(e => e.rank >= 4).slice(-5).reverse().forEach(gem => {
-                        const div = document.createElement('div');
-                        div.className = 'gem-item';
-                        div.innerHTML = `
-                            <div class="gem-summary">${gem.summary}</div>
-                            <div class="gem-meta">${gem.date} | Ref: ${gem.evidence.substring(0, 60)}...</div>
-                        `;
-                        container.appendChild(div);
-                    });
-                });
-        });
-    </script>
+    <script src="script.js?v=7.0"></script>
 </body>
 </html>
