Research Hub v3.1.6: Added future goals and achievement summary.

--- a/field_notes/research.html
+++ b/field_notes/research.html
@@ -15,7 +15,7 @@
             overflow: hidden;
         }
         .hero-section::before {
-            content: "v3.1.5";
+            content: "v3.1.6";
             position: absolute;
             top: 10px;
             right: 10px;
@@ -174,6 +174,22 @@
                 <div class="roadmap-content">
                     <h4>WideSeek-R1: Parallel Width Scaling <span class="badge badge-research">Researching</span></h4>
                     <p>Orchestrating parallel sub-agents to extract granular metadata (dates, tools, error codes) simultaneously to improve overall F1 score of the archive.</p>
+                </div>
+            </div>
+
+            <div class="roadmap-item">
+                <div class="roadmap-meta">FUTURE</div>
+                <div class="roadmap-content">
+                    <h4>vLLM High-Throughput Serving <span class="badge badge-planned">Planned</span></h4>
+                    <p>Transitioning from Ollama to vLLM to achieve state-of-the-art serving throughput for the Web Intercom and multi-agent loops.</p>
+                </div>
+            </div>
+
+            <div class="roadmap-item">
+                <div class="roadmap-meta">FUTURE</div>
+                <div class="roadmap-content">
+                    <h4>3x3 CVT Resume Builder <span class="badge badge-planned">Planned</span></h4>
+                    <p>Automated re-indexing of 18 years of technical notes into high-density candidate-value formats for targeted career positioning.</p>
                 </div>
             </div>
         </section>
