--- a/field_notes/intercom/index.html
+++ b/field_notes/intercom/index.html
@@ -4,45 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intercom | Acme Lab</title>
-    <link rel="stylesheet" href="../style.css?v=488571b7">
+    <link rel="stylesheet" href="../style.css?v=a0a7c672">
     <style>
-        main { display: flex; gap: 20px; transition: all 0.3s ease; }
-        #report-sidebar {
-            width: 30%;
-            background: #111;
-            border-left: 2px solid var(--border-color);
+        main { display: flex; gap: 0; transition: all 0.3s ease; height: 85vh; align-items: stretch; border: 1px solid var(--border-color); background: #050505; }
+        
+        #intercom-main { 
+            flex: 1; 
             padding: 20px;
-            font-family: 'Courier New', Courier, monospace;
-            font-size: 0.85rem;
-            color: #ccc;
-            overflow-y: auto;
-            max-height: 80vh;
-            display: none;
-            box-shadow: inset 5px 0 10px rgba(0,0,0,0.5);
+            display: flex;
+            flex-direction: column;
+            transition: all 0.3s ease;
         }
+
+        #report-sidebar {
+            flex: 1; /* Splits 50/50 with intercom when active */
+            background: #0a0a0a;
+            padding: 30px;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 0.95rem;
+            color: #d1d1d1;
+            border-left: 1px solid #222;
+            overflow-y: auto;
+            display: none;
+            box-shadow: inset 10px 0 20px rgba(0,0,0,0.8);
+            line-height: 1.6;
+        }
+        
         #report-sidebar.active { display: block; }
+
         .report-header { 
-            border-bottom: 1px solid #333; 
-            margin-bottom: 15px; 
-            padding-bottom: 5px;
+            border-bottom: 2px solid var(--accent-color); 
+            margin-bottom: 25px; 
+            padding-bottom: 10px;
             color: var(--accent-color);
             font-weight: bold;
+            letter-spacing: 2px;
+            font-family: var(--font-stack);
         }
-        #intercom-main { flex-grow: 1; }
 
         #chat-console {
             background: #000;
-            border: 1px solid var(--border-color);
+            border: 1px solid #111;
             border-left: 4px solid var(--accent-color);
-            height: 60vh;
+            flex-grow: 1;
             overflow-y: auto;
-            padding: 20px;
+            padding: 15px;
             font-family: var(--font-stack);
-            font-size: 0.9rem;
-            margin-bottom: 20px;
+            font-size: 0.85rem;
+            margin-bottom: 15px;
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 8px;
         }
         .message { margin-bottom: 5px; }
         .user-msg { color: var(--accent-color); }
